{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b70388ab-b06e-4576-a665-9691204dc2bb",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "75e68d71-e66a-4cdd-83e7-4636410437c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStick",
                    "type": "PassThrough",
                    "id": "20820594-1a89-447c-81f3-d35b342c841c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonX",
                    "type": "Button",
                    "id": "14b87448-0bcc-437d-bf7d-37eff97726ee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonB",
                    "type": "Button",
                    "id": "aa489604-0b82-4ba2-865f-d930c055681e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "buttonLT",
                    "type": "Button",
                    "id": "49cd6182-e6a1-4b08-a934-d5923b5c9618",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonA",
                    "type": "Button",
                    "id": "df8880d5-45f7-4864-bd60-6e8cc09b2617",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonY",
                    "type": "Button",
                    "id": "94fb2ed2-400d-499e-9560-b22f78bbd7a0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonStart",
                    "type": "Button",
                    "id": "14bbf43c-e962-4137-b254-03d80eb2e355",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "buttonRT",
                    "type": "Button",
                    "id": "407e6b20-99ad-407a-975c-e02ca6f571d5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5cab7af2-b410-4836-85d4-7ad50f0c0659",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bce0818-2d50-4b32-b2e2-0988a3607f6d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca97c933-92ca-4e43-9229-09bf0659b5d7",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9420aaca-e3c6-4b6a-9dea-2a304b774534",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9abe0e8c-7ee9-4dc0-bba9-3ff70f3ae6b2",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonLT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d6e5de1-44bd-4be4-a6b9-848c9b50a258",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8310f69e-9a4e-4779-8aa2-2bd8bf3b75d2",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67cc59d9-c363-4a72-abd0-d2af782549f7",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7499697f-8ba3-4860-a74e-c47c688e2569",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "buttonRT",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}